--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -52,8 +52,7 @@
                 android:layout_marginTop="50dp"
                 android:textColor="@color/white"
                 android:textSize="32sp"
-                android:textStyle="bold"
-                tools:text="London" />
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/tvDate"
@@ -71,8 +70,7 @@
                 android:layout_height="90dp"
                 android:layout_gravity="center"
                 android:layout_marginTop="60dp"
-                android:contentDescription="@null"
-                android:src="@drawable/search" />
+                android:contentDescription="@null" />
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -95,8 +93,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textColor="@color/white"
-                    android:textSize="56sp"
-                    tools:text="°F" />
+                    android:textSize="56sp" />
 
             </LinearLayout>
 
@@ -111,7 +108,7 @@
                 tools:text="It’s a sunny day." />
 
             <LinearLayout
-                android:layout_width="180dp"
+                android:layout_width="200dp"
                 android:layout_height="40dp"
                 android:layout_gravity="center"
                 android:layout_marginTop="10dp"
@@ -129,8 +126,7 @@
                         android:layout_height="wrap_content"
                         android:layout_centerVertical="true"
                         android:layout_marginStart="5dp"
-                        android:contentDescription="@null"
-                        android:src="@drawable/wind" />
+                        android:contentDescription="@null" />
 
                     <TextView
                         android:id="@+id/tvWindSpeed"
@@ -161,8 +157,7 @@
                         android:layout_height="wrap_content"
                         android:layout_centerVertical="true"
                         android:layout_marginStart="5dp"
-                        android:contentDescription="@null"
-                        android:src="@drawable/humidity" />
+                        android:contentDescription="@null" />
 
                     <TextView
                         android:id="@+id/tvHumidity"
@@ -180,8 +175,8 @@
             </LinearLayout>
 
             <LinearLayout
-                android:layout_width="280dp"
-                android:layout_height="80dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginTop="60dp"
                 android:orientation="horizontal"
@@ -199,8 +194,7 @@
                         android:layout_width="32dp"
                         android:layout_height="32dp"
                         android:layout_centerHorizontal="true"
-                        android:contentDescription="@null"
-                        android:src="@drawable/wind" />
+                        android:contentDescription="@null" />
 
                     <TextView
                         android:id="@+id/tvTodayTemp"
@@ -220,7 +214,6 @@
                         android:layout_below="@id/tvTodayTemp"
                         android:layout_centerHorizontal="true"
                         android:layout_marginTop="5dp"
-                        android:text="@string/today"
                         android:textColor="@color/white"
                         android:textSize="12sp" />
 
@@ -243,8 +236,7 @@
                         android:layout_width="32dp"
                         android:layout_height="32dp"
                         android:layout_centerHorizontal="true"
-                        android:contentDescription="@null"
-                        android:src="@drawable/wind" />
+                        android:contentDescription="@null" />
 
                     <TextView
                         android:id="@+id/tvTomorrowTemp"
@@ -264,7 +256,6 @@
                         android:layout_below="@id/tvTomorrowTemp"
                         android:layout_centerHorizontal="true"
                         android:layout_marginTop="5dp"
-                        android:text="@string/tomorrow"
                         android:textColor="@color/white"
                         android:textSize="12sp" />
 
@@ -287,8 +278,7 @@
                         android:layout_width="32dp"
                         android:layout_height="32dp"
                         android:layout_centerHorizontal="true"
-                        android:contentDescription="@null"
-                        android:src="@drawable/wind" />
+                        android:contentDescription="@null" />
 
                     <TextView
                         android:id="@+id/tvDayAfterTomorrowTemp"
@@ -309,8 +299,7 @@
                         android:layout_centerHorizontal="true"
                         android:layout_marginTop="5dp"
                         android:textColor="@color/white"
-                        android:textSize="12sp"
-                        tools:text="Friday" />
+                        android:textSize="12sp" />
 
                 </RelativeLayout>
 
@@ -364,7 +353,8 @@
                         android:layout_marginEnd="10dp"
                         android:contentDescription="@null"
                         android:padding="5dp"
-                        android:src="@drawable/clear" />
+                        android:src="@drawable/clear"
+                        android:visibility="gone" />
 
                     <EditText
                         android:id="@+id/etSearch"
@@ -374,7 +364,7 @@
                         android:layout_toStartOf="@id/ivClearSearch"
                         android:background="@null"
                         android:hint="@string/searchCity"
-                        android:imeOptions="actionSearch"
+                        android:imeOptions="actionDone"
                         android:importantForAutofill="no"
                         android:inputType="text"
                         android:padding="10dp"
@@ -416,5 +406,13 @@
 
         </RelativeLayout>
     </RelativeLayout>
+
+    <ProgressBar
+        android:id="@+id/loadingBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:visibility="gone" />
 
 </RelativeLayout>
